5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4485/executions/1590_2895.log
== TEST (2019-04-03 14:41:19) 
-- CODE:
print(intup(5))
var = input("Instruções: ") 
print(float(int(5)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(intup(5))
NameError: name 'intup' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:35) 
-- CODE:
print(intut(5))
var = input("Instruções: ") 
print(float(int(5)))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    print(intut(5))
NameError: name 'intut' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:44) 
-- CODE:
print(input(5))
var = input("Instruções: ") 
print(float(int(5)))

-- OUTPUT:
512
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:41:54) 
-- CODE:
print(input())
var = input("Instruções: ") 
print(float(int(5)))

-- OUTPUT:
12
5.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:44:18) 
-- CODE:
var1=print(input(5))
var2= input("Instruções: ") 
var3=print(float(int(5)))
total=(var1*var2+var3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:44:19) 
-- CODE:
var1=print(input(5))
var2= input("Instruções: ") 
var3=print(float(int(5)))
total=(var1*var2+var3)

-- EXECUTION TIME:
0.164087
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:44:20) 
-- CODE:
var1=print(input(5))
var2= input("Instruções: ") 
var3=print(float(int(5)))
total=(var1*var2+var3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-03 14:45:05) 
-- CODE:
var1=print(input(5))
var2= input(5) 
var3=print(float(int(5)))
total=(var1*var2+var3)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    total=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'NoneType'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-03 14:45:07) 
-- CODE:
var1=print(input(5))
var2= input(5) 
var3=print(float(int(5)))
total=(var1*var2+var3)

-- EXECUTION TIME:
0.154505
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    total=(var1*var2+var3)
TypeError: can't multiply sequence by non-int of type 'NoneType'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:16:43) 
-- CODE:
var1=print(input(5))
var2= input(5) 
var3=
-- ERROR:
File "XXXX", line 3
    var3=
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:16:44) 
-- CODE:
var1=print(input(5))
var2= input(5) 
var3=
-- EXECUTION TIME:
0.136227
-- ERROR:
  File "/home/codebench/codes/1590/2895/main.py", line 3
    var3=
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:17:50) 
-- CODE:
q = input()
v = input()
f = input()
t = q * v + f
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = q * v + f
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:17:52) 
-- CODE:
q = input()
v = input()
f = input()
t = q * v + f
print(t)
-- EXECUTION TIME:
0.137956
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/2895/main.py", line 4, in <module>
    t = q * v + f
TypeError: can't multiply sequence by non-int of type 'str'

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:17:53) 
-- CODE:
q = input()
v = input()
f = input()
t = q * v + f
print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    t = q * v + f
TypeError: can't multiply sequence by non-int of type 'str'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:18:51) 
-- CODE:
q = float(input())
v = float(input())
f = float(input())
t = q * v + f
print(t1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    print(t1)
NameError: name 't1' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 13:18:57) 
-- CODE:
q = float(input())
v = float(input())
f = float(input())
t = q * v + f
print(t)
-- OUTPUT:
618.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 13:18:59) 
-- CODE:
q = float(input())
v = float(input())
f = float(input())
t = q * v + f
print(t)
-- EXECUTION TIME:
0.185845
-- TEST CASE 1:
---- input:
12
45.0
78.0
---- correct output:
618.0
---- user output:
618.0
-- TEST CASE 2:
---- input:
10
67.0
95.0
---- correct output:
765.0
---- user output:
765.0
-- TEST CASE 3:
---- input:
246
975.0
321.0
---- correct output:
240171.0
---- user output:
240171.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
